<resources>
    <string name="app_name">Trivia App</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="name_error_msg">Please enter a name</string>
    <string name="enter_name">Enter your name</string>
    <string name="quit">Quit</string>
    <string name="quit_playing">Hey, are you sure you want to quit playing?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="who_is_best_cricketer">Who is the best cricketer in the world?</string>
    <string name="sachin">Sachin Tendulkar</string>
    <string name="virat">Virat Kolli</string>
    <string name="adam">Adam Gilchirst</string>
    <string name="kallis">Jacques Kallis</string>
    <string name="radioButton_error">Please select a option</string>
    <string name="checkbox_error">Please select correct options</string>
    <string name="national_flag_color">What are the colors in the Indian national flag? Select all that is correct.</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="hello_name">Hello \"%s\" ,</string>
    <string name="answers_selected">Here are the answers selected:</string>
    <string name="national_flag_question">"What are the colors in the national flag?  "</string>
    <string name="answers">Answers : \"%s\"</string>
    <string name="answer">Answer : \"%s\"</string>
    <string name="finish">Finish</string>
    <string name="summary">Summary</string>
    <string name="game_date_time">Game %s : %s %s</string>
    <string name="name_value">Name : %s</string>
</resources>